trying to make the photo to work

--- a/templates/initial.html
+++ b/templates/initial.html
@@ -6,7 +6,7 @@
             WANT TO TAKE A PHOTO ?
         </h1>
 
-        <form action="/form">
+        <form action="/photo">
             <input type="submit">
         </form>
     </body>
