--- a/templates/photo.html
+++ b/templates/photo.html
@@ -5,5 +5,11 @@
 </head>
 <body>
     <img src="{{ user_image }}" alt="Your Image">    
+
+    <br><br>
+    <p>Go to select accessories</p>
+    <form action="/form">
+        <input type="submit">
+    </form>
 </body>
 </html>
