--- a/templates/photo.html
+++ b/templates/photo.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <img src="{{ user_image }}" alt="Your Image">    
+    <img src="{{ user_image }}" alt="Your Image">
 
+    <br><br>
+    <p>Take another photo</p>
+    <form action="/photo">
+        <input type="submit">
+    </form>
     <br><br>
     <p>Go to select accessories</p>
     <form action="/form">
