--- a/templates/photo.html
+++ b/templates/photo.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-</head>
-<body>
-    <img src="{{ user_image }}" alt="Your Image">
 
-    <br><br>
-    <p>Take another photo</p>
-    <form action="/photo">
-        <input type="submit">
-    </form>
-    <br><br>
-    <p>Go to select accessories</p>
-    <form action="/form">
-        <input type="submit">
-    </form>
-</body>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <title> Document </title>
+    </head>
+    
+    <body>
+        <img src="{{ user_image }}" alt="Your Image">
+
+        <br><br>
+        <p>Take another photo</p>
+        <form action="/photo">
+            <input type="submit">
+        </form>
+        <br><br>
+        <p>Go to select accessories</p>
+        <form action="/form">
+            <input type="submit">
+        </form>
+    </body>
 </html>
