--- a/templates/initial.html
+++ b/templates/initial.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <title> Document </title>
+    </head>
+    
     <body>
         <h1>
             WANT TO TAKE A PHOTO ?
