--- a/templates/postend.html
+++ b/templates/postend.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <title> Document </title>
+    </head>
+    
     <body>
         <h1> THE FORMS IS OVER </h1><br><br>
         <h2> Go back to the menu </h2>
