--- a/templates/photo.html
+++ b/templates/photo.html
@@ -3,6 +3,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/photo.css') }}">
         <title> Document </title>
     </head>
     
