--- a/templates/postend.html
+++ b/templates/postend.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/postend.css') }}">
         <title> Document </title>
     </head>
     
