--- a/static/css/photo.css
+++ b/static/css/photo.css
@@ -1,3 +1,69 @@
 body{
     background-color: rgb(89, 198, 220);
 }
+
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.photo{
+    float: left;
+    margin-left: 315px;
+    margin-top: 40px;
+}
+
+.photo h1{
+    color: red;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5em;
+    padding: 40px;
+    padding-top: 0px;
+    padding-bottom: 20px;
+}
+
+.photo input[type="submit"]{
+    background: #0066A2;
+    color: white;
+    border-style: outset;
+    border-color: #0066A2;
+    height: 50px;
+    border-radius: 25px;
+    width: 135px;
+    margin-left: 70px;
+}
+
+.photo input[type="submit"]:hover{
+    border-radius: 25px;
+    background-color: #004d7a;
+}
+
+.acc{
+    float: left;
+    margin-left: 330px;
+    margin-top: 40px;
+}
+
+.acc h1{
+    color: red;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5em;
+    padding-bottom: 20px;
+}
+
+.acc input[type="submit"]{
+    background: #0066A2;
+    color: white;
+    border-style: outset;
+    border-color: #0066A2;
+    height: 50px;
+    border-radius: 25px;
+    width: 135px;
+    margin-left: 70px;
+}
+
+.acc input[type="submit"]:hover{
+    border-radius: 25px;
+    background-color: #004d7a;
+}
