--- a/static/css/initial.css
+++ b/static/css/initial.css
@@ -1,3 +1,75 @@
-body{
-    background-color: rgb(89, 198, 220);
-}
+.u-section-1 {
+    background-image: linear-gradient(0deg, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url("images/0082acb0f71a35fbd01dfaa9dd4f1acc2ae8e61d10e84f4ec3ffecbc8116b8efa9c9809350b85ef20751cd119cb5dc46c649523b2972e8865fa59f_1280.jpg");
+  }
+  
+  .u-section-1 .u-sheet-1 {
+    min-height: 660px;
+  }
+  
+  .u-section-1 .u-text-1 {
+    font-size: 4.5rem;
+    font-weight: 400;
+    font-family: Montserrat, sans-serif;
+    text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
+    width: 770px;
+    margin: 207px auto 0;
+  }
+  
+  .u-section-1 .u-btn-1 {
+    border-style: solid;
+    align-self: center;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin: 40px auto -92px;
+    padding: 10px 57px 10px 55px;
+  }
+  
+  @media (max-width: 1199px) {
+     .u-section-1 {
+      background-position: 50% 50%;
+    }
+  
+    .u-section-1 .u-sheet-1 {
+      min-height: 774px;
+    }
+  
+    .u-section-1 .u-text-1 {
+      margin-left: 85px;
+      margin-right: 85px;
+    }
+  }
+  
+  @media (max-width: 991px) {
+    .u-section-1 .u-sheet-1 {
+      min-height: 693px;
+    }
+  
+    .u-section-1 .u-text-1 {
+      font-size: 3.4375rem;
+      margin-left: 0;
+      margin-right: 0;
+      width: 720px;
+    }
+  }
+  
+  @media (max-width: 767px) {
+    .u-section-1 .u-sheet-1 {
+      min-height: 621px;
+    }
+  
+    .u-section-1 .u-text-1 {
+      font-size: 3rem;
+      width: 540px;
+    }
+  }
+  
+  @media (max-width: 575px) {
+    .u-section-1 .u-sheet-1 {
+      min-height: 590px;
+    }
+  
+    .u-section-1 .u-text-1 {
+      font-size: 2.125rem;
+      width: 340px;
+    }
+  }
