--- a/static/css/postend.css
+++ b/static/css/postend.css
@@ -1,3 +1,78 @@
-body{
-    background-color: rgb(89, 198, 220);
-}
+.u-section-1 {
+    background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("images/pexels-ana-arantes-3006228.jpg");
+  }
+  
+  .u-section-1 .u-sheet-1 {
+    min-height: 800px;
+  }
+  
+  .u-section-1 .u-text-1 {
+    font-size: 6rem;
+    font-weight: 700;
+    margin: 131px 10px 0 72px;
+  }
+  
+  .u-section-1 .u-text-2 {
+    margin: 307px auto 0;
+  }
+  
+  .u-section-1 .u-btn-1 {
+    background-image: linear-gradient(#ffffff, black);
+    text-transform: uppercase;
+    font-weight: 700;
+    margin: 32px auto 60px;
+  }
+  
+  @media (max-width: 1199px) {
+     .u-section-1 {
+      background-position: 50% 50%;
+    }
+  
+    .u-section-1 .u-sheet-1 {
+      min-height: 660px;
+    }
+  
+    .u-section-1 .u-text-1 {
+      margin-right: 72px;
+    }
+  }
+  
+  @media (max-width: 991px) {
+    .u-section-1 .u-sheet-1 {
+      min-height: 506px;
+    }
+  }
+  
+  @media (max-width: 767px) {
+    .u-section-1 .u-sheet-1 {
+      min-height: 922px;
+    }
+  
+    .u-section-1 .u-text-1 {
+      width: auto;
+      margin-top: 91px;
+      margin-left: 52px;
+      margin-right: 52px;
+    }
+  
+    .u-section-1 .u-text-2 {
+      margin-top: 347px;
+    }
+  }
+  
+  @media (max-width: 575px) {
+    .u-section-1 .u-sheet-1 {
+      min-height: 903px;
+    }
+  
+    .u-section-1 .u-text-1 {
+      font-size: 3.75rem;
+      margin-top: 109px;
+      margin-left: 29px;
+      margin-right: 29px;
+    }
+  
+    .u-section-1 .u-text-2 {
+      margin-top: 328px;
+    }
+  }
