--- a/templates/initial.html
+++ b/templates/initial.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
-
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/initial.css') }}">
-        <title> Document </title>
-    </head>
-    
-    <body>
-        <h1>
-            WANT TO TAKE A PHOTO ?
-        </h1>
-
-        <form action="/photo">
-            <input type="submit">
-        </form>
-    </body>
-</html>
+<html style="font-size: 16px;" lang="pt"><head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="keywords" content="​Join Accenture’s virtual program for new perspectives, ​Technology Of The Future, 01, 02, 03, 04, ​AI &amp;amp; Digital Platform, ​Essential 8 Emerging Technologies, ​Technology Of The Future, Join our newsletter">
+    <meta name="description" content="">
+    <title>Principal Page</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/geral.css') }}" media="screen">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/initial.css') }}" media="screen">
+    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+    <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
+    <meta name="theme-color" content="#232b79">
+    <meta property="og:title" content="Principal Page">
+    <meta property="og:description" content="">
+    <meta property="og:type" content="website">
+  </head>
+  
+  <body class="u-body u-xl-mode" data-lang="pt">
+    <section class="u-align-center u-border-3 u-border-grey-75 u-clearfix u-image u-parallax u-shading u-section-1" id="carousel_5ad0" src="" data-image-width="1280" data-image-height="853">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h1 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-title u-text-1">Wanna take a Photo?</h1>
+         <form action="/photo"> 
+            <input type="submit" value="Take a photo" class="u-active-white u-border-2 u-border-white u-btn u-button-style u-hover-white u-none u-text-active-black u-text-body-alt-color u-text-hover-black u-btn-1">
+          </form>
+      </div>
+    </section>
+  
+</body></html>
