--- a/templates/postend.html
+++ b/templates/postend.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
-
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/postend.css') }}">
-        <title> Document </title>
-    </head>
+<html style="font-size: 16px;" lang="pt"><head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <title>Postend</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/geral.css') }}" media="screen">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/postend.css') }}" media="screen">
+    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+    <meta name="theme-color" content="#232b79">
+    <meta property="og:title" content="Postend">
+    <meta property="og:description" content="">
+    <meta property="og:type" content="website">
+  </head>
+  <body class="u-body u-image u-xl-mode" data-lang="pt" style="background-position: 50% 50%; background-attachment: fixed; background-image: url(&quot;images/pexels-ana-arantes-3006228.jpg&quot;);">
+    <section class="u-align-center u-clearfix u-image u-parallax u-shading u-section-1" src="" data-image-width="1920" data-image-height="1306" id="sec-1158">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h1 class="u-text u-title u-text-1"> The form is finished!</h1>
+        <p class="u-large-text u-text u-text-default u-text-variant u-text-2">Thank you to take some of you time and visiting our job!<br>
+        </p>
+        <a href="/" class="u-border-none u-btn u-btn-round u-button-style u-gradient u-hover-grey-90 u-none u-radius-20 u-btn-1"> Go back to menu</a>
+      </div>
+    </section>
     
-    <body>
-        <h1> THE FORMS IS OVER </h1><br><br>
-        <h2> Go back to the menu </h2>
-        <form action="/">
-            <input type="submit">
-        </form> 
-    </body>
-</html>
+    
+    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-b796"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <p class="u-small-text u-text u-text-variant u-text-1">Thanks for visiting our website!</p>
+      </div></footer>
+    
+</body></html>
