--- a/templates/Attributes.html
+++ b/templates/Attributes.html
@@ -86,7 +86,7 @@
             </div>
 
            <div class="u-form-group u-form-select u-form-group-5">
-              <label for="acce" class="u-label">Choose a accessory:</label>
+              <label for="acce" class="u-label">Choose an accessory:</label>
               <div class="u-form-select-wrapper">
                 <select id="select-0495" name="acce" class="u-border-2 u-border-grey-30 u-input u-input-rectangle u-radius-18 u-white" required="required">
                   <option value="--------------------">--------------------</option>
