--- a/templates/postend.html
+++ b/templates/postend.html
@@ -17,7 +17,7 @@
     <section class="u-align-center u-clearfix u-image u-parallax u-shading u-section-1" src="" data-image-width="1920" data-image-height="1306" id="sec-1158">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-title u-text-1"> The form is finished!</h1>
-        <p class="u-large-text u-text u-text-default u-text-variant u-text-2">Thank you to take some of you time and visiting our job!<br>
+        <p class="u-large-text u-text u-text-default u-text-variant u-text-2">Thank you for spending some of your time visiting our project!<br>
         </p>
         <a href="/" class="u-border-none u-btn u-btn-round u-button-style u-gradient u-hover-grey-90 u-none u-radius-20 u-btn-1"> Go back to menu</a>
       </div>
