--- a/static/css/initial.css
+++ b/static/css/initial.css
@@ -1,75 +1,81 @@
 .u-section-1 {
-    background-image: linear-gradient(0deg, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url("images/0082acb0f71a35fbd01dfaa9dd4f1acc2ae8e61d10e84f4ec3ffecbc8116b8efa9c9809350b85ef20751cd119cb5dc46c649523b2972e8865fa59f_1280.jpg");
-  }
-  
+  background-image: linear-gradient(#404040, #26ffb0);
+}
+
+.u-section-1 .u-sheet-1 {
+  min-height: 698px;
+}
+
+.u-section-1 .u-text-1 {
+  font-size: 6rem;
+  font-weight: 700;
+  margin: 202px 87px 0;
+}
+
+.u-section-1 .u-btn-1 {
+  text-transform: uppercase;
+  font-weight: 700;
+  transition-duration: 2.25s;
+  box-shadow: 2px 0 0 0 rgba(0,0,0,0);
+  margin: 70px auto 60px;
+}
+
+@media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
     min-height: 660px;
   }
-  
+
   .u-section-1 .u-text-1 {
-    font-size: 4.5rem;
-    font-weight: 400;
-    font-family: Montserrat, sans-serif;
-    text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
-    width: 770px;
-    margin: 207px auto 0;
+    width: auto;
+    margin-top: 171px;
+    margin-right: auto;
   }
-  
+
   .u-section-1 .u-btn-1 {
-    border-style: solid;
-    align-self: center;
-    font-weight: 700;
-    text-transform: uppercase;
-    margin: 40px auto -92px;
-    padding: 10px 57px 10px 55px;
+    margin-top: 101px;
   }
-  
-  @media (max-width: 1199px) {
-     .u-section-1 {
-      background-position: 50% 50%;
-    }
-  
-    .u-section-1 .u-sheet-1 {
-      min-height: 774px;
-    }
-  
-    .u-section-1 .u-text-1 {
-      margin-left: 85px;
-      margin-right: 85px;
-    }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 506px;
   }
-  
-  @media (max-width: 991px) {
-    .u-section-1 .u-sheet-1 {
-      min-height: 693px;
-    }
-  
-    .u-section-1 .u-text-1 {
-      font-size: 3.4375rem;
-      margin-left: 0;
-      margin-right: 0;
-      width: 720px;
-    }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 380px;
   }
-  
-  @media (max-width: 767px) {
-    .u-section-1 .u-sheet-1 {
-      min-height: 621px;
-    }
-  
-    .u-section-1 .u-text-1 {
-      font-size: 3rem;
-      width: 540px;
-    }
+}
+
+@media (max-width: 575px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 576px;
   }
-  
-  @media (max-width: 575px) {
-    .u-section-1 .u-sheet-1 {
-      min-height: 590px;
-    }
-  
-    .u-section-1 .u-text-1 {
-      font-size: 2.125rem;
-      width: 340px;
-    }
+
+  .u-section-1 .u-text-1 {
+    font-size: 3.75rem;
+    margin-top: 61px;
+    margin-left: 33px;
+    margin-right: 33px;
   }
+
+  .u-section-1 .u-btn-1 {
+    transition-duration: 1.25s;
+    margin-top: 96px;
+  }
+}
+
+.u-section-1 .u-btn-1,
+.u-section-1 .u-btn-1:before,
+.u-section-1 .u-btn-1 > .u-container-layout:before {
+  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, background-size, background-position;
+}
+
+.u-section-1 .u-btn-1.u-btn-1.u-btn-1:hover {
+  box-shadow: 2px 2px 8px 0 rgba(128,128,128,1) !important;
+}
+
+.u-section-1 .u-btn-1.u-btn-1.u-btn-1.hover {
+  box-shadow: 2px 2px 8px 0 rgba(128,128,128,1) !important;
+}
