--- a/static/css/postend.css
+++ b/static/css/postend.css
@@ -1,78 +1,49 @@
 .u-section-1 {
-    background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("images/pexels-ana-arantes-3006228.jpg");
-  }
-  
-  .u-section-1 .u-sheet-1 {
-    min-height: 800px;
-  }
-  
+  background-image: linear-gradient(black, #26ffb0);
+}
+
+.u-section-1 .u-sheet-1 {
+  min-height: 50vw;
+}
+
+.u-section-1 .u-text-1 {
+  font-size: 6rem;
+  font-weight: 900;
+  transition-duration: 3s;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  text-transform: uppercase;
+  transform: translateX(0px) translateY(0px) scale(1) rotate(0deg);
+  width: 595px;
+  margin: 60px auto;
+}
+
+@media (max-width: 1199px) {
   .u-section-1 .u-text-1 {
-    font-size: 6rem;
-    font-weight: 700;
-    margin: 131px 10px 0 72px;
+    width: 479px;
   }
-  
-  .u-section-1 .u-text-2 {
-    margin: 307px auto 0;
+}
+
+@media (max-width: 575px) {
+  .u-section-1 .u-text-1 {
+    font-size: 1.875rem;
+    width: 340px;
   }
-  
-  .u-section-1 .u-btn-1 {
-    background-image: linear-gradient(#ffffff, black);
-    text-transform: uppercase;
-    font-weight: 700;
-    margin: 32px auto 60px;
-  }
-  
-  @media (max-width: 1199px) {
-     .u-section-1 {
-      background-position: 50% 50%;
-    }
-  
-    .u-section-1 .u-sheet-1 {
-      min-height: 660px;
-    }
-  
-    .u-section-1 .u-text-1 {
-      margin-right: 72px;
-    }
-  }
-  
-  @media (max-width: 991px) {
-    .u-section-1 .u-sheet-1 {
-      min-height: 506px;
-    }
-  }
-  
-  @media (max-width: 767px) {
-    .u-section-1 .u-sheet-1 {
-      min-height: 922px;
-    }
-  
-    .u-section-1 .u-text-1 {
-      width: auto;
-      margin-top: 91px;
-      margin-left: 52px;
-      margin-right: 52px;
-    }
-  
-    .u-section-1 .u-text-2 {
-      margin-top: 347px;
-    }
-  }
-  
-  @media (max-width: 575px) {
-    .u-section-1 .u-sheet-1 {
-      min-height: 903px;
-    }
-  
-    .u-section-1 .u-text-1 {
-      font-size: 3.75rem;
-      margin-top: 109px;
-      margin-left: 29px;
-      margin-right: 29px;
-    }
-  
-    .u-section-1 .u-text-2 {
-      margin-top: 328px;
-    }
-  }
+}
+
+.u-section-1 .u-text-1,
+.u-section-1 .u-text-1:before,
+.u-section-1 .u-text-1 > .u-container-layout:before {
+  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, background-size, background-position;
+}
+
+.u-section-1 .u-container-layout:hover .u-text-1 {
+  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px) !important;
+}
+
+.u-container-layout.hover .u-section-1 .u-text-1 {
+  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px) !important;
+}
