--- a/templates/postend.html
+++ b/templates/postend.html
@@ -2,30 +2,24 @@
 <html style="font-size: 16px;" lang="pt"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="Thanks for visi​​ting us !">
     <meta name="description" content="">
     <title>Postend</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/geral.css') }}" media="screen">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/postend.css') }}" media="screen">
-    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-    <meta name="theme-color" content="#232b79">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/geral2.css') }}" media="screen">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/postend.css') }}" media="screen">
+    <meta name="generator" content="Nicepage 4.15.11, nicepage.com">
+    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+    <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Postend">
-    <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body u-image u-xl-mode" data-lang="pt" style="background-position: 50% 50%; background-attachment: fixed; background-image: url(&quot;images/pexels-ana-arantes-3006228.jpg&quot;);">
-    <section class="u-align-center u-clearfix u-image u-parallax u-shading u-section-1" src="" data-image-width="1920" data-image-height="1306" id="sec-1158">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-title u-text-1"> The form is finished!</h1>
-        <p class="u-large-text u-text u-text-default u-text-variant u-text-2">Thank you for spending some of your time visiting our project!<br>
-        </p>
-        <a href="/" class="u-border-none u-btn u-btn-round u-button-style u-gradient u-hover-grey-90 u-none u-radius-20 u-btn-1"> Go back to menu</a>
+  <body class="u-body u-xl-mode" data-lang="pt"><header class="u-black u-clearfix u-header u-header" id="sec-e0ea"><div class="u-clearfix u-sheet u-sheet-1"></div></header>
+    <section class="u-align-center u-clearfix u-gradient u-section-1" id="carousel_b2c8">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <h1 class="u-hover-feature u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="2250">THANKS FOR VISITING US!</h1>
       </div>
+      
     </section>
     
-    
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-b796"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Thanks for visiting our website!</p>
-      </div></footer>
     
 </body></html>
