Added view page

--- a/templates/Attributes.html
+++ b/templates/Attributes.html
@@ -72,16 +72,23 @@
               <input type="text" placeholder="Enter a valid email addres" name="email" class="u-border-2 u-border-grey-30 u-input u-input-rectangle u-radius-18 u-white" required="required">
             </div>
             <br>
-
-            <div class="new">
-              <img class="u-image u-image-round u-radius-50 u-image-4" src="{{ hair1 }}" alt="" data-image-width="91" data-image-height="91">
-              <img class="u-image u-image-round u-radius-50 u-image-4" src="{{ hair2 }}" alt="" data-image-width="91" data-image-height="91">
-              <img class="u-image u-image-round u-radius-50 u-image-4" src="{{ hair3 }}" alt="" data-image-width="91" data-image-height="91">
-            </div>
-            <img class="u-image u-image-round u-radius-50 u-image-4" src="{{ hair4 }}" alt="" data-image-width="91" data-image-height="91">
-
-            <div class="a"><p>cabelo 1 ----- cabelo 2 ----- cabelo 3 ----- cabelo 4 ...............................................</p></div>
-
+            <table>
+              <tr>
+                <td>
+                  <div class="new">
+                    <img class="u-image u-image-round u-radius-50 u-image-4" src="{{ hair1 }}" alt="" data-image-width="91" data-image-height="91">
+                    <img class="u-image u-image-round u-radius-50 u-image-4" src="{{ hair2 }}" alt="" data-image-width="91" data-image-height="91">
+                    <img class="u-image u-image-round u-radius-50 u-image-4" src="{{ hair3 }}" alt="" data-image-width="91" data-image-height="91">
+                    <img class="u-image u-image-round u-radius-50 u-image-4" src="{{ hair4 }}" alt="" data-image-width="91" data-image-height="91">
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  cabelo 1 &nbsp&nbsp&nbsp&nbsp cabelo 2 &nbsp&nbsp&nbsp&nbsp cabelo 3 &nbsp&nbsp&nbsp&nbsp cabelo 4 
+                </td>
+              </tr>
+            </table>
             <div class="u-form-group u-form-select u-form-group-4">
               <label for="select-9405" class="u-label">Choose a Hairstyle</label>
               <div class="u-form-select-wrapper">
@@ -97,14 +104,23 @@
 
             <br>
 
-            <div class="new">
-              <img class="u-image u-image-round u-radius-50 u-image-4" src="{{ acc1 }}" alt="" data-image-width="91" data-image-height="91">
-              <img class="u-image u-image-round u-radius-50 u-image-4" src="{{ acc2 }}" alt="" data-image-width="91" data-image-height="91">
-            </div>
-            <img class="u-image u-image-round u-radius-50 u-image-4" src="{{ acc3 }}" alt="" data-image-width="91" data-image-height="91">
-
-            <div class="a"><p>Brinco 1 ----- Colar 1 ----- Colar 2 .....................................................................</p></div>
-
+            <table>
+              <tr>
+                <td>
+                  <div class="new">
+                    <img class="u-image u-image-round u-radius-50 u-image-4" src="{{ acc1 }}" alt="" data-image-width="91" data-image-height="91">
+                    <img class="u-image u-image-round u-radius-50 u-image-4" src="{{ acc2 }}" alt="" data-image-width="91" data-image-height="91">
+                    <img class="u-image u-image-round u-radius-50 u-image-4" src="{{ acc3 }}" alt="" data-image-width="91" data-image-height="91">
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="a">Brinco 1 &nbsp&nbsp&nbsp&nbsp&nbsp Colar 1 &nbsp&nbsp&nbsp&nbsp&nbsp Colar 2</div>
+                </td>
+              </tr>
+            </table>
+            
             <div class="u-form-group u-form-select u-form-group-5">
               <label for="acce" class="u-label">Choose an accessory:</label>
               <div class="u-form-select-wrapper">
