Moved pages for more security?

--- a/templates/postend.html
+++ b/templates/postend.html
@@ -16,7 +16,7 @@
   <body class="u-body u-xl-mode" data-lang="pt"><header class="u-black u-clearfix u-header u-header" id="sec-e0ea"><div class="u-clearfix u-sheet u-sheet-1"></div></header>
     <section class="u-align-center u-clearfix u-gradient u-section-1" id="carousel_b2c8">
       <p></p>
-      <div><h2><a href="/">Avataring Again</a></h2></div>
+      <div><h2><a href="/initial">Avataring Again</a></h2></div>
       <p></p>
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h1 class="u-hover-feature u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="2250">THANKS FOR VISITING US!</h1>
