--- a/templates/myAvattaringForm.html
+++ b/templates/myAvattaringForm.html
@@ -5,8 +5,8 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <title>Attributes</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/geral.css') }}" media="screen"> 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Attributes.css') }}" media="screen">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/geral1.css') }}" media="screen"> 
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/Attributes1.css') }}" media="screen">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <meta name="theme-color" content="#232b79">
     <meta property="og:title" content="Attributes">
